# agent-vcr

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cassette-format.md
docs/assets/: demo.tape
examples/: record_replay_demo.py  test_weather_agent.py  weather_agent.py
scripts/: smoke.sh
src/agent_vcr/: __init__.py  __main__.py  cassette.py  cli.py  errors.py  matchers.py  pytest_plugin.py  redact.py  trajectory.py  vcr.py
tests/: conftest.py  test_auto_mode.py  test_cassette_format.py  test_cli.py  test_matchers.py  test_pytest_plugin.py  test_readme_example.py  test_record_replay.py  test_redact.py  test_strict_miss.py  test_trajectory.py
