[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-vcr"
version = "0.1.0"
description = "VCR.py for AI agents: record and replay tool/MCP calls, assert on trajectories, catch behavior drift in CI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["agent", "testing", "vcr", "mcp", "tool-calling", "record-replay", "pytest", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
agent-vcr = "agent_vcr.cli:main"

[project.entry-points.pytest11]
agent_vcr = "agent_vcr.pytest_plugin"

[project.urls]
Homepage = "https://github.com/JaydenCJ/agent-vcr"
Repository = "https://github.com/JaydenCJ/agent-vcr"
Issues = "https://github.com/JaydenCJ/agent-vcr/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "examples"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
